@@ -33,12 +33,12 @@ echo "---------------------------------------"
 echo "running libtoolize"
 libtoolize --force --ltdl  || { echo "Libtoolize failed. THIS MIGHT CAUSE PROBLEMS LATER, continuing " ; }
 echo "running aclocal" 
-aclocal --force -I . || { echo "bootstrap failed, because aclocal failed. exiting. " , exit 100; }
+aclocal -I . || { echo "bootstrap failed, because aclocal failed. exiting. " ; exit 100; }
 echo "...done"
 echo "running automake -a"
-automake -a --force ||  { echo "bootstrap failed, because automake failed. exiting." , exit 101; }
+automake -a ||  { echo "bootstrap failed, because automake failed. exiting." ; exit 101; }
 echo "...done"
 echo "running autoconf"
-autoconf ||    { echo "bootstrap failed, because autoconf failed. exiting." , exit 102; }
+autoconf ||    { echo "bootstrap failed, because autoconf failed. exiting." ; exit 102; }
 echo "...done"
 echo "Now you should be able to run ./configure"
